update the versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-dm-control == 0.0.364896371
-dm-robotics-agentflow == 0.0.4
-dm-robotics-controllers == 0.0.4
-dm-robotics-geometry == 0.0.4
-dm-robotics-manipulation == 0.0.4
-dm-robotics-moma == 0.0.4
-dm-robotics-transformations == 0.0.4
-tensorflow == 2.7.0.rc0
+dm-control >= 1.0.0
+dm-robotics-agentflow == 0.5.0
+dm-robotics-controllers == 0.5.0
+dm-robotics-geometry == 0.5.0
+dm-robotics-manipulation == 0.5.0
+dm-robotics-moma == 0.5.0
+dm-robotics-transformations == 0.5.0
+tensorflow == 2.7.0
 dm-reverb-nightly == 0.5.0.dev20211104
 opencv-python >= 3.4.0
 typing-extensions >= 3.7.4
