--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-dm-control >= 1.0.0
+dm-control >= 1.0.9
 dm-robotics-agentflow == 0.5.0
 dm-robotics-controllers == 0.5.0
 dm-robotics-geometry == 0.5.0
@@ -6,7 +6,7 @@ dm-robotics-manipulation == 0.5.0
 dm-robotics-moma == 0.5.0
 dm-robotics-transformations == 0.5.0
 tensorflow == 2.7.0
-dm-reverb-nightly == 0.5.0.dev20211104
+dm-reverb == 0.6.1
 opencv-python >= 3.4.0
 typing-extensions >= 3.7.4
 protobuf < 3.21
